RCRA-12 #comment Add jwt encode

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #==== lock on db ====#
 spring.jpa.open-in-view=false
+
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
