RCRA-28 #in-progress #comment Add Auditing configuration

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ local.properties
 # External tool builders
 .externalToolBuilders/
 
-# Locally stored "Eclipse launch configurations"
+1# Locally stored "Eclipse launch configurations"
 *.launch
 
 # PyDev specific (Python IDE for Eclipse)
