--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.9.5</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.4.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
