RCRA-30 #in-progress #comment Handled with ExpiredJwtException. Need to implement exception response object

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,10 @@ spring.datasource.username=jerry
 spring.datasource.password=mcGuier
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 #==== lock on db ====#
 spring.jpa.open-in-view=false
-
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 #==== email properties ====#
 spring.mail.host=smtp.gmail.com
@@ -22,5 +21,9 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
-
+#==== application server ====#
 my.local.server.ip=192.168.43.32
+
+#==== jwt ====#
+my.jwt.secret-key=mnasdifmjh^R$%&*(KJ<MNMKYFBngmh,jk.;adsf
+my.jwt.expiration-time=300000
