--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.output.ansi.enabled=ALWAYS
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/db_rental_cars?useSSL=true&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=jerry
-spring.datasource.password=mcGuier
+spring.datasource.password=@mcGuier1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
@@ -27,3 +27,5 @@ my.local.server.ip=192.168.43.32
 #==== jwt ====#
 my.jwt.secret-key=mnasdifmjh^R$%&*(KJ<MNMKYFBngmh,jk.;adsf
 my.jwt.expiration-time=300000
+
+#springdoc.swagger-ui.path=/swagger-ui-custom.html
