--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.output.ansi.enabled=ALWAYS
 #==== connect to mysql ======#
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/db_rental_cars?useSSL=true&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
-spring.datasource.username=jerry
-spring.datasource.password=@mcGuier1
+spring.datasource.username=[**********]
+spring.datasource.password=[**********]
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
@@ -15,8 +15,8 @@ spring.jpa.open-in-view=false
 #==== email properties ====#
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=testonspring@gmail.com
-spring.mail.password=te5t5prin&6
+spring.mail.username=[**********]
+spring.mail.password=[**********]
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
