--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
 #==== application server ====#
-my.local.server.ip=192.168.43.32
+my.local.server.ip=[**********]
 
 #==== jwt ====#
 my.jwt.secret-key=mnasdifmjh^R$%&*(KJ<MNMKYFBngmh,jk.;adsf
